--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-phone-number-input": "^1.12.13",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
